--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
             <li><a href="dorms.html">Dorms</a></li>
+            <li><a href="prizes.html">Prizes</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
@@ -34,7 +35,10 @@
         <h2 class="subheading">Join Us!</h2>
         <p class="subtext">Are you passionate about sustainability? Do you want to make a difference on campus and beyond? Join us in the "Green Rivalry: The Dorm Energy Challenge." Whether you're a dorm resident looking to compete or a volunteer interested in supporting our mission, there's a place for you on our team.</p>
         <h2 class="subheading">Contact Us</h2>
-        <p class="subtext">If you have any questions, suggestions, or would like to get involved, please don't hesitate to contact us. We'd love to hear from you!</p>
+        <p class="subtext">If you have any questions, suggestions, or would like to get involved, please don't hesitate to contact us. We'd love to hear from you! </p>
+        <p class="subtext"><strong>Email:</strong> greenrivalryuva@virginia.edu</p> 
+        <p class="subtext"><strong>Instagram:</strong> @GreenRivalryUVA</p>
+        <br><br>
     </main>
 </body>
 </html>
