--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
             <li><a href="dorms.html">Dorms</a></li>
+            <li><a href="prizes.html">Prizes</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
@@ -25,7 +26,7 @@
         <section class="blurb-container">
             <h1 class="text-center" style="font-size: 35px; padding-top: 20px; font-weight: 900;">Green Rivalry: The UVA Dorm Energy Challenge</h1>
             <p class="text-center" style="font-size: 25px; font-weight: 100;">
-                Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win $20,000 for your dorm!</b> Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
+                Join the ultimate showdown of sustainability! Compete with your dorm mates to slash energy consumption and <b>win up to $5,000 in prizes each month</b> for your dorm! Track your progress, climb the leaderboard, and turn conservation into victory – all while securing a greener future for our campus.
             </p>
         </section>
 
@@ -33,20 +34,20 @@
             <img src="images/rotating-globe.svg">
         </div>
 
-        <h2 class="text-center" style="font-size: 40px; padding-top: 75px">The Top 3</h2>
+        <h2 class="text-center" style="font-size: 40px; padding-top: 75px">This Month's Top 3</h2>
         <section class="leaderboard">
             <ul class="leaderboard-list">
                 <li class="leaderboard-list-entry">
-                    <span class="rank-name">1 &nbsp;Gibbons Dorm</span>
-                    <span class="score">1500</span>
+                    <span class="rank-name">1 &nbsp;Watson-Webb</span>
+                    <span class="score">1329 eD</span>
                 </li>
                 <li class="leaderboard-list-entry">
-                    <span class="rank-name">2 &nbsp;Lyle-Maupin Dorm</span>
-                    <span class="score">1000</span>
+                    <span class="rank-name">2 &nbsp;Gooch Dorm</span>
+                    <span class="score">1433 eD</span>
                 </li>
                 <li class="leaderboard-list-entry">
-                    <span class="rank-name">3 &nbsp;McCormick Dorm</span>
-                    <span class="score">500</span>
+                    <span class="rank-name">3 &nbsp;Dillard Dorm</span>
+                    <span class="score">1442 eD</span>
                 </li>
             </ul>
         </nav>
