--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,6 +16,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="leaderboard.html">Leaderboard</a></li>
             <li><a href="dorms.html">Dorms</a></li>
+            <li><a href="prizes.html">Prizes</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
@@ -27,8 +28,15 @@
             </table>
         </section>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
-        <canvas id="myChart"></canvas>
+        <div class="wrapper" style="height: 800px; width:800px; margin: auto;"><canvas id="myChart" width="500"></canvas></div>
         <script src="js/leaderboard.js"></script>
+        <br><br><br>
+        <section class="how-it-works">
+            <h2 class="subheading"><b>eD Score Calculation</b></h2>
+            <p class="subtext" style="line-height: 1.5;">
+                The eD score is calculated using a comprehensive approach to ensure fairness and accuracy. All data collected on utilities such as chilled water and electricity usage are standardized by computing the z-score, making eD always relative. The z-score is then multiplied by the Metric Tons of Carbon Dioxide Equivalents for each utility and summed to create a preliminary score. Finally, we apply the sigmoid function to the preliminary score, which moderates the scale of progress—making initial improvements more impactful than later ones and ensuring that advancing from a small to medium eD score is easier than progressing from medium to high.
+            </p>
+        </section>
     </main>
 </body>
 </html>
